--- a/index.html
+++ b/index.html
@@ -1,81 +1,120 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>food_lover</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<html lang="en">
+<head>
+  <title>Bootstrap Theme The Band</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Pacifico" rel="stylesheet">
+  <style>
+  /* .container {
+      padding: 80px 120px;
+  } */
+  .person {
+    border: 10px solid transparent;
+    margin-bottom: 80px;
+    width: 25%;
+    height: 100%;
+  }
+  .person:hover {
+      border-color: #f1f1f1;
+  }
+  h1{
+    font-family: 'Pacifico', cursive;
+  }
+  #desc, #profile{
+    font-family: 'Pacifico', cursive;
+    font-family: 'Amatic SC', cursive;
+    font-size: 200%
+  }
+
+  #myCarousel{
+    font-size: 150%
+  }
+  .class{
+    width: 10%;
+    height: 10%
+  }
 
 
-  </head>
-  <body>
-    
-<!-- NAVBAR  -->
+  </style>
 
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-<!--       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button> -->
-      <a class="navbar-brand" href="#">Welcome to my page</a>
+</head>
+<body>
+<div class="container text-center">
+  <h1>paulynn cooks</h1>
+  <br>
+  <br>
+  <div id="desc">
+  <p>Reigniting food memories</p>
+  <p>Composing new dishes</p>
+  <p>Sharing recipes</p>
+  </div>
+<br>
+</div>
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="lambribs.jpg" alt="lamb">
+        <div class="carousel-caption">
+          <h3>Chili tamarind lamb ribs with mustard greens</h3>
+          <p>Spicy and sour pairs so well with tender meat-falls-off ribs</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="meatballs.jpg" alt="meatballs">
+        <div class="carousel-caption">
+          <h3>Meatballs in curry sauce</h3>
+          <p>Homemade meatballs with curry sauce and fresh arugula</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="daikon_soup.jpg" alt="Los Angeles">
+        <div class="carousel-caption">
+          <h3>Braised purple daikon soup</h3>
+          <p>Spicy and warm soup perfectly enjoyed on a cold Saturday morning</p>
+        </div>
+      </div>
     </div>
 
-   
-<!-- JumboTron -->
-      <p></p>
-      <div class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Food Lover Project</h1>
-        <p class="lead">Welcome to your Bootstrap Project: Coffee Lover</p>
-        <p class="lead">You will recreate this webpage and an additional Form Page</p>
-        <p class="lead">Just follow the instruction steps here to re-create these webpages!</p>
-        <ol>
-          <li>Create a general landing page with a JumboTron</li>
-          <li>Next create a NavBar on the Page that links to another html file</li>
-          <li>Next use the Grid system to add in thumbnail pictures of coffee. Source: https://stocksnap.io/search/coffee You will need to use the thumbnail class for this. Here are the image links:
-          <ul>
-            <li><a href=https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg>One</a></li>
-            <li><a href=https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg>Two</a></li>
-            <li><a href=https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg>Three</a></li>
-            <li><a href=https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg>Four</a></li>
-          </ul>
-          </li>
-          <li>Next make sure that at the largest settings you have 3 columns of pictures. On the smallest screen settings you should have 2 columns. Its up to you where you want to change.</li>
-          <li>Next create another html file for the sign up page.</li>
-          <li>Create a Form on this Sign Up page with Email, Password, and a Check Box</li>
-
-        </ol>
-        <p class="lead">That's it. Feel free to play around with this project and style it more to your liking. The main focuses of this project are the uses of NavBar, Jumbotron, Form, Container, and the Grid System.</p>
-
-      </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-
-      <div class="container">
-        <p><h1>Pictures of Food</h1>
-        </p>
-
-      <!-- pictures of coffee -->
-      <!-- <div class="container"> -->
-        <div class="row">
-          <div class="col-lg-4 col-xs-6" ><img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg" class="img-thumbnail" alt="Responsive image"></div>
-          <div class="col-lg-4 col-xs-6" ><img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg" class="img-thumbnail" alt="Responsive image"></div>
-          <div class="col-lg-4 col-xs-6" ><img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg" class="img-thumbnail" alt="Responsive image"></div>
-          <div class="col-lg-4 col-xs-6" ><img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg" class="img-thumbnail" alt="Responsive image"></div>
-          <div class="col-lg-4 col-xs-6" ><img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg" class="img-thumbnail" alt="Responsive image"></div>
-          <div class="col-lg-4 col-xs-6" ><img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg" class="img-thumbnail" alt="Responsive image thumbnail"></div>
-
-        </div>
-
-      </div>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
 
 
+    </div>
 
-  </body>
+  </div>
+<br>
+<br>
+  <div class="jumbotron">
+    <div class="container text-center" id="profile">
+    <p><strong>The food tester</strong></p><br>
+    <img src="self1.jpg" class="img-circle person" alt="Random Name">
+
+  </div>
+
+</div>
+
+</body>
 </html>
